<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">droidreads</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_updates">Updates</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_logout">Logout</string>
    <string name="login_with_goodreads">Login with goodreads</string>
    <string name="logging_in">Logging in …</string>
    <string name="unauthorized_api">Unauthorized API response</string>
    <string name="toolbar_title_updates">Updates</string>
    <string name="toolbar_title_notifications">Notifications</string>
    <string name="became_your_friend" formatted="false"><b>%s</b> became your friend</string>
    <string name="became_friend_with" formatted="false"><b>%s</b> became friend with <b>%s</b></string>
    <string name="became_friend_with2" formatted="false">%s</string>
    <string name="commented_on" formatted="false">%s commented on %s</string>
    <string name="gave_review" formatted="false">Gave %d star(s) to</string>
    <string name="recommended" formatted="false"><b>%s</b> recommended <b>%s</b></string>
    <string name="recommended2" formatted="false"><b>%s</b> %s</string>

    <string name="update_user_status" formatted="false">is on page %d of %d (%d%% done) of</string>
    <string name="update_added_to_shelf" formatted="false">added to shelf %s</string>
    <string name="update_gave_stars" formatted="false">gave</string>

    <!-- book details -->
    <string name="book_details_toolbar_subtitle" formatted="false">by %s</string>
    <string name="book_details_format" formatted="false">%s, %d pages</string>
    <string name="more">More</string>
    <string name="similar_books">Similar books</string>
    <string name="read_more">read more</string>
    <string name="book_cover_cd">Book cover (content description)</string>
    <string name="friends_reviews">Friend\'s reviews</string>
    <string name="by">by</string>
    <string name="goodreads_id">Goodreads ID</string>
    <string name="googlebooks_id">Google Books ID</string>
    <string name="isbn">ISBN</string>
    <string name="publisher">Publisher</string>
    <string name="publisher_with_date" formatted="false">%s, %d</string>
    <string name="avg">Avg.</string>
    <string name="of">of</string>
    <string name="ratings">ratings</string>
    <string name="pages" formatted="false">%d pages</string>
    <string name="fontawesome_star">{fa-star}</string>
    <string name="is_friend_with_action_text">is now friends with</string>
</resources>
